<resources>
    <string name="app_name">OneDayCoupleDiary</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="login" translatable="false">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="intro" translatable="false">Intro</string>
    <string name="forget_password_message">Forget Password?</string>

    <string name="login_anonymously">Login without Register</string>

    <string name="dialog_confirm_title">Warning</string>
    <string name="dialog_confirm_message">If you delete the application, the diary will be deleted. Shall we start like this?</string>
    <string name="dialog_ok_button">OK</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_message_logout">Are you sure you want to logout?</string>

    <string name="join">Join</string>
    <string name="calendar">Calendar</string>
    <string name="diary">Dairy</string>
    <string name="write">Write</string>
    <string name="title">Title</string>
    <string name="content">Content</string>

    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>

    <string-array name="color_select">
        <item>MAIN_PINK</item>
        <item>PINK_100</item>
        <item>PINK_200</item>
        <item>PINK_300</item>
        <item>PINK_400</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="backup">BackUp</string>
    <string name="full_reset">Full Reset</string>
    <string name="app_version">App Version</string>
</resources>