<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.fragment.WriteDiaryFragment">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/pink_100"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:hint="2022-12-31" />

                    <EditText
                        android:id="@+id/titleArea"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_margin="20dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/title"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/contentArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/content"
                        android:inputType="textMultiLine" />

                    <Button
                        android:id="@+id/writeBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="40dp"
                        android:backgroundTint="@color/pink_300"
                        android:text="@string/add"
                        android:textColor="@color/white" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>
